--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 	This browser doesn't seem to like Canvas
 	</canvas>
 	<p id='score' style='color:white; font-family:arial;font-size:3em'> 0:0 </p>
+	<span id='instructions-left' style='margin-right:100px;color:white; font-family:arial;font-size:1em'>
+		(Left paddle: e/d)</span>
+	<span id='instructions-right' style='margin-left:100px;color:white; font-family:arial;font-size:1em'>
+		(right paddle: o/l)</span>
 		<script type="text/javascript"> pong(); </script>
 </body>
 </html>
